CmCapture/include/CmCapture.h

/**获取外接按键回调函数
*@param lData值的意义1为按下2为抬起
*/
typedef bool (CALLBACK * callBackKeyRecept)(long lData);
/**@brief 获取设备序列号
*
*@param [in] devIndex 设备ID，即摄像头序号,0号开始
*@return
	- 设备序列号 
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API char *camGetDevSN(long devIndex);
 

/**@brief 设置照片旋转方向
*
*@param [in] imageFilePath 照片（全路径）
*@param [in] rotateMode 0: 不旋转 1:90度 2: 180度 3: 270度 4: 自动裁切纠偏
*@return 
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camRotateImage(char *imageFilePath,long rotateMode);
/**@brief 开始多路录像 
*
*@param [in] arrCamID[99] 有序的摄像头序号,依此次序排列视频录像，且在每两个视频相接处有时间水印。
*@param [in] nCamIDCount 有效的摄像头个数。
*@param [in] filePath 要生成的录像文件
*@param [in] micphone 选用的麦克风ID
*@param [in] videoFormat 输出的录像文件格式ID
*@param [in] nCompressionRadio 压缩率值范围0~55，值越大画面质量越好文件越大。
*@return
	- @ref ERR_NONE 成功
*	- @ref ERR_OUTOFBOUNDS 不存在的设备ID
*@note 
*@pre  @ref camInitCameraLib @ref camOpenDev
*@attention
*/
CAMSDK_API long camStartMultiRecord(long arrCamID[10],long nCamIDCount,char * filePath,long micphone,long videoFormat,int nCompressionRadio = 25);
/**@brief 关闭多路录像 
*
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib @ref camOpenDev @ref camStartMultiRecord
*@attention
*/
CAMSDK_API long camStopMultiRecord();
/**@brief 图片文件加到PDF队列
*
*@param [in] filePath 需导出PDF的图片文件全路径
*@return
	- @ref ERR_NONE 成功
*@note 配和接口@ref CombinePDF 实现单张或多张图片转为一个PDF文件输出。加到队列的图片在执行合并@ref CombinePDF 后会自动清空。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camAddFileToPDFList(char *filePath);
/**@brief 导出PDF文件
*
*@param [in] pdfFilePath 导出的PDF文件（全路径）
*@param [in] lJpegQuality 压缩率，值范围1~100。先压缩再并输出PDF前
*@return
	- @ref ERR_NONE 成功
*@note 输出的PDF是由@ref AddFileToPDFList 导入的图片队列生成的。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camCombinePDF(char *pdfFilePath,long nJpegQuality);
/**@brief 图片文件加到TIF队列
*
*@param [in] filePath 需导出PDF的图片文件全路径
*@return
	- @ref ERR_NONE 成功
*@note 配和接口@ref CombineTIF 实现单张或多张图片转为一个TIF文件输出。加到队列的图片在执行合并@ref CombineTIF 后会自动清空。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camAddFileToTIFList(char *filePath);
/**@brief 导出TIF文件
*
*@param [in] tifFilePath 导出的TIF文件（全路径）
*@return
	- @ref ERR_NONE 成功
*@note 输出的TIF是由@ref AddFileToTIFList 导入的图片队列生成的。
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long camCombineTIF(char *tifFilePath);
/**@brief 身份证识别库初始化
*@prarm [无]
*@return
 @ref ERR_NONE 成功
*@note 初始化成功后，退出须反初始化
*/
CAMSDK_API long cardOCRInitIDCardOCR();
/**@brief 身份证识别库反初始化
*@prarm [无]
*@return
 @ref ERR_NONE 成功
*/
CAMSDK_API long cardOCRUnInitIDCardOCR();
/**@brief 识别身份证
*@param [in] imagePath识别图像路径
*@param [in] headerFilePath识别头像路径
*@return
	-识别结果，各项以竖线分开
*/
CAMSDK_API char *cardOCRRecognizeIDCard_OCR(char *imagePath,char *headerFilePath);
/**@brief 获取OCR支持的语言个数
*
*@param [out] count 语言个数
*@return
*	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrGetLanguageCount(long &count);
/**@brief 获取OCR语言名称
*@param [in] index编号，从0开始
*@param [out] name语言名称
*@return
*	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrGetLanguageName(long index,char *name);
/**@brief 向OCR识别队列中添加图像
*@param [in] imagePath需要识别的图像路径
*@return
*	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrAddImageFileToOCRList(char *imagePath);
/**@brief 识别OCR队列中的图像并导出
*@param [in] filePath导出路径
*@param [in] nlanguage语言序号
*@return
*	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrCombineToFile(char *filePath,long nlanguage);
/**@brief OCR条码/二维码识别
*
*@prarm [in] src 照片路径，可识别图中多个码
*@prarm [in] codeType 编码类型 1条码 2二维码
*@prarm [out] count 识别出结果的个数
*@return
	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrRecognizeBarcode(char *src,long codeType,long &count);
/**@brief OCR获得条码/二维码识别结果
*
*@prarm [in] Index 识别结果ID
*@prarm [out] cText 识别出的文本结果
*@prarm [in/out] size 输入为cText的空间长度，输出为结果的长度。
*@return
	- @ref ERR_NONE 成功
*/
CAMSDK_API long ocrGetBarcodeText(long Index,char* cText,long &size);
/**@brief 外接按键模块初始化
*
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long KeyOpenDevice();
/**@brief 外接按键模块反初始化
*
*@return
	- @ref ERR_NONE 成功
*@note
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long KeyCloseDevice();
/**@brief 外接按键设置提示灯工作模式
*@param [in] bAuto  True表示自动模式。False表示手动模式，由接口KeySetLedState控制提示灯的状态
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long KeySetAutoLights(bool bAuto);
/**@brief 外接按键设置提示灯状态
*@param [in] lState 值意义：0-熄灭，1-绿色，2-红色，3-橙色（与红色很相近）
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long KeySetLedState(long lState);
/**@brief 外接按键获取状态，（注册回调函数）
*@param [in] funCB  函数指针，函数原型为typedef bool (CALLBACK * callBackKeyRecept)(long lData);其中lData值的意义1为按下2为抬起。
*@return
	- @ref ERR_NONE 成功
*@note 
*@pre @ref camInitCameraLib
*@attention
*/
CAMSDK_API long KeyRegCallBackKeyRecept(callBackKeyRecept funCB);
/**@brief OTR模块初始化
*
*@prarm [无]
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
	- @ref ERR_UNKNOW 失败
*/
CAMSDK_API long otrInit();
/**@brief OTR模块反初始化
*
*@prarm [无]
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*/
CAMSDK_API long otrUnInit();
/**@brief OTR模块获取模板支持数量
*
*@prarm [out] nCount 模板数量
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*/
CAMSDK_API long otrGetTemplateCount(long &nCount);
/**@brief OTR模块获取模板信息
*
*@prarm [in] nIndex 模板编号
*@prarm [out] chMsg 模板名称
*@prarm [in] nMsgSize 模板名称长度
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*@note chMsg长度要求至少为1024 
*/
CAMSDK_API long otrGetTemplateInfo(long nIndex, char* chMsg, long &nMsgSize);
/**@brief OTR模块识别
*
*@prarm [in] nIndex 模板编号
*@prarm [in] chPath 需要识别的图片

*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*@note chMsg长度要求至少为10000 
*/
CAMSDK_API long otrRecog(long nIndex, char* chPath);
/**@brief OTR模块获取识别区域数量
*
*@prarm [out] nCount 识别区域数量
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*/
CAMSDK_API long otrGetResultCount(long &nCount);
/**@brief OTR模块获取识别区域结果
*
*@prarm [in] nIndex 识别区域
*@prarm [out] chName 区域名称
*@prarm [out] chResult 区域结果
*@return
	- @ref ERR_NONE 成功
	- @ref ERR_NOLICENSE 没有授权
*/
CAMSDK_API long otrGetResultInfo(long nIndex,char* chName,char* chResult);