CmCapture/CmCaptureHelper.cs

        /// <summary>
        /// 获取SN
        /// </summary>
        /// <param name="devIndex"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetDevSN", CallingConvention = CallingConvention.Cdecl)]
        public static extern string GetDevSN(int devIndex);
        /// <summary>
        /// 写入SN
        /// </summary>
        /// <param name="devIndex"></param>
        /// <param name="sn"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camDevWriteSN", CallingConvention = CallingConvention.Cdecl)]
        public static extern string DevWriteSN(int devIndex, string sn);
        /// <summary>
        /// 多流录制
        /// </summary>
        /// <param name="arrCamID"></param>
        /// <param name="nCamIDCount"></param>
        /// <param name="filePath"></param>
        /// <param name="micphone"></param>
        /// <param name="videoFormat"></param>
        /// <param name="nCompressionRadio"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camStartMultiRecord", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StartMultiRecord(int[] arrCamID, int nCamIDCount, string filePath, int micphone, int videoFormat, int nCompressionRadio = 25);
        //停止多流录制
        [DllImport("CmCapture.dll", EntryPoint = "camStopMultiRecord", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StopMultiRecord();
        /// <summary>
        ///获取录制声音大小
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camGetMultiRecordMicrophoneVolumeLevel", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetMultiRecordMicrophoneVolumeLevel();
        /// <summary>
        /// 获取语言个数
        /// </summary>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrGetLanguageCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetLanguageCount(ref int count);
        /// <summary>
        /// 获取语言名称
        /// </summary>
        /// <param name="index"></param>
        /// <param name="name"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrGetLanguageName", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetLanguageName(int index, StringBuilder name);
        /// <summary>
        /// 将图片加入识别队列
        /// </summary>
        /// <param name="imagePath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrAddImageFileToOCRList", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AddImageFileToOCRList(string imagePath);
        /// <summary>
        /// 识别队列中的图片并导出
        /// </summary>
        /// <param name="imagePath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrCombineToFile", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CombineToFile(string filePath, int nlanguage);
        /// <summary>
        /// 识别条码
        /// </summary>
        /// <param name="src"></param>
        /// <param name="codeType"></param>
        /// <param name="count"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrRecognizeBarcode", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RecognizeBarcode(string src, int codeType, ref int count);
        /// <summary>
        /// 条码结果
        /// </summary>
        /// <param name="src"></param>
        /// <param name="cText"></param>
        /// <param name="size"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "ocrGetBarcodeText", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetBarcodeText(int Index, StringBuilder cText, ref int size);
        /// <summary>
        /// 身份证初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "cardOCRInitIDCardOCR", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OCRInitIDCardOCR();
        /// <summary>
        /// 识别身份证
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "cardOCRRecognizeIDCard_OCR", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OCRRecognizeIDCard_OCR(string imagePath, string headerFilePath);
        /// <summary>
        /// 身份证反初始化
        /// </summary>
        /// <param name="?"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "cardOCRUnInitIDCardOCR", CallingConvention = CallingConvention.Cdecl)]
        public static extern string OCRUnInitIDCardOCR();
        /// <summary>
        /// 获取模板信息
        /// </summary>
        /// <param name="count"></param>
        /// <param name="chMsg"></param>
        /// <param name="nMsgSize"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrGetTemplateInfo", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetTemplateInfo(int count, StringBuilder chMsg, ref int nMsgSize);
        /// <summary>
        /// 识别
        /// </summary>
        /// <param name="nIndex"></param>
        /// <param name="chPath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrRecog", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Recog(int nIndex, string chPath);
        /// <summary>
        /// 获取识别区域数量
        /// </summary>
        /// <param name="nCount"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrGetResultCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetResultCount(ref int nCount);
        /// <summary>
        /// 获取识别区域数量
        /// </summary>
        /// <param name="nIndex"></param>
        /// <param name="chName"></param>
        /// <param name="chResult"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrGetResultInfo", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetResultInfo(int nIndex, StringBuilder chName, StringBuilder chResult);

        /// <summary>
        /// OTR初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrInit", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Init();
        /// <summary>
        /// 获取模板数量
        /// </summary>
        /// <param name="nTCount"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrGetTemplateCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int GetTemplateCount(ref int nTCount);
        /// <summary>
        /// OTR反初始化
        /// </summary>
        /// <param name="nTCount"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "otrUnInit", CallingConvention = CallingConvention.Cdecl)]
        public static extern int UnInit();
        /// <summary>
        /// 蜂鸟模块初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "KeyOpenDevice", CallingConvention = CallingConvention.Cdecl)]
        public static extern int OpenDevice();
        /// <summary>
        /// 蜂鸟模块反初始化
        /// </summary>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "KeyCloseDevice", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CloseDevice();
        /// <summary>
        /// 注册按键回调
        /// </summary>
        /// <param name="funCB"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "KeyRegCallBackKeyRecept", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RegCallBackKeyRecept(callBackKeyRecept funCB);
        /// <summary>
        /// 设置提示灯工作模式
        /// </summary>
        /// <param name="bAuto"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "KeySetAutoLights", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetAutoLights(bool bAuto);
        /// <summary>
        /// 设置提示灯状态
        /// </summary>
        /// <param name="lState"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "KeySetLedState", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SetLedState(int lState);
        /// <summary>
        /// 裁切纠偏
        /// </summary>
        /// <param name="lState"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camRotateImage", CallingConvention = CallingConvention.Cdecl)]
        public static extern int RotateImage(string imageFilePath, int rotateMode);
        /// <summary>
        /// 图片文件加到PDF队列
        /// </summary>
        /// <param name="imageFilePath"></param>
        /// <param name="rotateMode"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camAddFileToPDFList", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AddFileToPDFList(string filePath);
        /// <summary>
        /// 导出PDF文件
        /// </summary>
        /// <param name="pdfFilePath"></param>
        /// <param name="nJpegQuality"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camCombinePDF", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CombinePDF(string pdfFilePath, int nJpegQuality);
        /// <summary>
        /// 图片文件加到TIF队列
        /// </summary>
        /// <param name="filePath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camAddFileToTIFList", CallingConvention = CallingConvention.Cdecl)]
        public static extern int AddFileToTIFList(string filePath);
        /// <summary>
        /// 导出TIF文件
        /// </summary>
        /// <param name="filePath"></param>
        /// <returns></returns>
        [DllImport("CmCapture.dll", EntryPoint = "camCombineTIF", CallingConvention = CallingConvention.Cdecl)]
        public static extern int CombineTIF(string tifFilePath);
    }
}
